build: the first dependency here that is not pure bytecode
EIP-4844's point-evaluation precompile verifies a proof over BLS12-381, and
this build has no such arithmetic. The field's answer is uniform: the two
production clients read for this, and the consensus-layer client beside one of
them, all wrap the same C reference implementation rather than reimplementing
it. This follows them.

The cost is named rather than absorbed. Every other entry on this classpath is
pure bytecode that runs wherever a JVM runs; this one carries native libraries
for five platform and architecture pairs, and on anything else it fails at load
with no automatic remedy. That is accepted for the five that cover real
deployment, as a decision rather than as a detail.

It goes on the machine's module at compile scope, because that is where the
precompile set and the existing curve precompiles already live, and because the
test this build applies throughout is whether a type here uses it rather than
whether one elsewhere might. It declares no dependencies of its own -- confirmed
from the published metadata and then from the resolved classpath itself, which
holds four entries and nothing unexpected -- and it is Apache-2.0 as published,
read from the artifact rather than from a repository's licence file.

The grant it needs is a second, separable cost. Loading a native library is a
restricted operation on the JDK this project declares: the call still succeeds
and warns on every load, and the warning says plainly that a future release will
refuse it. The grant therefore belongs in the file the launcher reads, and NOT
in the test task's own options, because tests here do not fork -- they run in
the same virtual machine as the build. Adding it to the test options would have
been configuration that reads as active and enforces nothing, which is the
failure this project guards against elsewhere. If forking is ever turned on for
a module, the grant does not travel with it and has to be stated there too